feat(transport): replace live text journaling with Aeron Archive