@@ -31,7 +31,7 @@ import dev.sam.exchange.engine.RejectReason;
 import dev.sam.exchange.engine.RejectResult;
 import dev.sam.exchange.engine.Side;
 import dev.sam.exchange.engine.Trade;
-import dev.sam.exchange.persistence.RequestJournal;
+import io.aeron.archive.client.AeronArchive;
 import io.aeron.Aeron;
 import io.aeron.FragmentAssembler;
 import io.aeron.Publication;
@@ -43,7 +43,7 @@ class AeronEngineServerTest {
   @Test
   @Timeout(30)
   void rejectsRequestIdConflictAndKeepsServingRequests(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
+    Path archiveDirectory = tempDir.resolve("archive");
     UUID originalId = new UUID(0L, 1L);
     CommandRequest original = new CommandRequest(originalId, new PlaceOrder(1L, Side.ASK, 100L, 5L));
     CommandRequest conflict = new CommandRequest(originalId, new PlaceOrder(99L, Side.BID, 100L, 2L));
@@ -51,93 +51,94 @@ class AeronEngineServerTest {
     CommandRequest finalFill = new CommandRequest(new UUID(0L, 3L), new PlaceOrder(3L, Side.BID, 100L, 3L));
 
     // The conflicting bid must neither trade nor replace the original ask's cached response.
-    List<List<CommandResult>> results = runServerWithRequests(tempDir, journalPath,
+    List<List<CommandResult>> results = runServerWithRequests(tempDir, archiveDirectory,
         List.of(List.of(original, conflict, original, next, finalFill)), false, false);
 
     assertEquals(List.of(new PlaceResult(1L, List.of(), 5L), new RejectResult(99L, RejectReason.REQUEST_ID_CONFLICT),
         new PlaceResult(1L, List.of(), 5L), new PlaceResult(2L, List.of(new Trade(2L, 1L, 100L, 2L)), 0L),
         new PlaceResult(3L, List.of(new Trade(3L, 1L, 100L, 3L)), 0L)), results.getFirst());
-    assertEquals(List.of(original, next, finalFill), new RequestJournal(journalPath).readAll());
+    assertEquals(List.of(original, next, finalFill), ArchiveTestSupport.readAll(archiveDirectory));
   }
 
   @Test
   @Timeout(30)
   void retryAfterClientReconnectDoesNotMatchTheFilledOrderAgain(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
+    Path archiveDirectory = tempDir.resolve("archive");
     CommandRequest ask = new CommandRequest(new UUID(0L, 1L), new PlaceOrder(1L, Side.ASK, 100L, 5L));
     CommandRequest bid = new CommandRequest(new UUID(0L, 2L), new PlaceOrder(2L, Side.BID, 100L, 2L));
     CommandRequest finalFill = new CommandRequest(new UUID(0L, 3L), new PlaceOrder(3L, Side.BID, 100L, 3L));
 
     // A new client retries the already-filled bid using the same UUID, then consumes the remaining three lots.
-    List<List<CommandResult>> results = runServerWithRequests(tempDir, journalPath,
+    List<List<CommandResult>> results = runServerWithRequests(tempDir, archiveDirectory,
         List.of(List.of(ask, bid), List.of(bid, finalFill)), false, false);
 
     PlaceResult originalFill = new PlaceResult(2L, List.of(new Trade(2L, 1L, 100L, 2L)), 0L);
     assertEquals(List.of(new PlaceResult(1L, List.of(), 5L), originalFill), results.get(0));
     assertEquals(List.of(originalFill, new PlaceResult(3L, List.of(new Trade(3L, 1L, 100L, 3L)), 0L)), results.get(1));
-    assertEquals(List.of(ask, bid, finalFill), new RequestJournal(journalPath).readAll());
+    assertEquals(List.of(ask, bid, finalFill), ArchiveTestSupport.readAll(archiveDirectory));
   }
 
   @Test
   @Timeout(30)
   void returnsEveryTradeWhenReplyExceedsTheOriginalBufferAndFragmentSize(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
+    Path archiveDirectory = tempDir.resolve("archive");
     List<EngineCommand> initialOrders = new ArrayList<>();
-    RequestJournal journal = new RequestJournal(journalPath);
+    List<CommandRequest> initialRequests = new ArrayList<>();
     List<Trade> expectedTrades = new ArrayList<>();
     for (long orderId = 1; orderId <= 100; orderId++) {
       PlaceOrder ask = new PlaceOrder(orderId, Side.ASK, 100L, 1L);
       initialOrders.add(ask);
-      journal.append(new CommandRequest(new UUID(0L, orderId), ask));
+      initialRequests.add(new CommandRequest(new UUID(0L, orderId), ask));
       expectedTrades.add(new Trade(1000L, orderId, 100L, 1L));
     }
 
+    ArchiveTestSupport.record(archiveDirectory, initialRequests);
     PlaceResult expected = new PlaceResult(1000L, expectedTrades, 0L);
     String encoded = new CommandResponseCodec().encode(new CommandResponse(UUID.randomUUID(), expected));
     assertTrue(encoded.length() > 256, "The reply must exceed the old server buffer");
     assertTrue(encoded.length() > IPC_MTU_LENGTH, "The reply must require multiple fragments");
 
     // A single bid sweeps all 100 resting asks; the UUID-filtering test peer reassembles its reply.
-    List<CommandResult> results = runServerSession(tempDir, journalPath,
+    List<CommandResult> results = runServerSession(tempDir, archiveDirectory,
         List.of(new PlaceOrder(1000L, Side.BID, 100L, 100L), new CancelOrder(100L)), false);
 
     assertEquals(List.of(expected, new CancelResult(100L, false)), results);
     List<EngineCommand> expectedCommands = new ArrayList<>(initialOrders);
     expectedCommands.add(new PlaceOrder(1000L, Side.BID, 100L, 100L));
     expectedCommands.add(new CancelOrder(100L));
-    assertEquals(expectedCommands, journalCommands(journalPath));
+    assertEquals(expectedCommands, recordedCommands(archiveDirectory));
   }
 
   @Test
   @Timeout(30)
   void waitsForCompleteFragmentedRequestBeforeProcessingIt(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
-    List<List<CommandResult>> results = runServerWithClients(tempDir, journalPath,
+    Path archiveDirectory = tempDir.resolve("archive");
+    List<List<CommandResult>> results = runServerWithClients(tempDir, archiveDirectory,
         List.of(List.of(new PlaceOrder(1L, Side.BID, 100L, 10L))), false, true);
 
     assertEquals(List.of(List.of(new PlaceResult(1L, List.of(), 10L))), results);
-    assertEquals(List.of(new PlaceOrder(1L, Side.BID, 100L, 10L)), journalCommands(journalPath),
-        "Process and journal the request exactly once");
+    assertEquals(List.of(new PlaceOrder(1L, Side.BID, 100L, 10L)), recordedCommands(archiveDirectory),
+        "Process and log the request exactly once");
   }
 
   @Test
   @Timeout(30)
   void keepsDriverAliveWhileClientDelaysReply(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
-    List<CommandResult> results = runServerSession(tempDir, journalPath,
+    Path archiveDirectory = tempDir.resolve("archive");
+    List<CommandResult> results = runServerSession(tempDir, archiveDirectory,
         List.of(new PlaceOrder(1L, Side.BID, 100L, 10L), new PlaceOrder(2L, Side.ASK, 99L, 4L)), true);
 
     assertEquals(
         List.of(new PlaceResult(1L, List.of(), 10L), new PlaceResult(2L, List.of(new Trade(2L, 1L, 100L, 4L)), 0L)),
         results);
     assertEquals(List.of(new PlaceOrder(1L, Side.BID, 100L, 10L), new PlaceOrder(2L, Side.ASK, 99L, 4L)),
-        journalCommands(journalPath));
+        recordedCommands(archiveDirectory));
   }
 
   @Test
   @Timeout(30)
   void recoversRemainingOrdersAndCachedRepliesAfterServerRestart(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("journal/requests.journal");
+    Path archiveDirectory = tempDir.resolve("nested/archive");
     CommandRequest bid = new CommandRequest(new UUID(0L, 1L), new PlaceOrder(1L, Side.BID, 100L, 10L));
     CommandRequest ask = new CommandRequest(new UUID(0L, 2L), new PlaceOrder(2L, Side.ASK, 99L, 4L));
     CommandRequest finalFill = new CommandRequest(new UUID(0L, 3L), new PlaceOrder(3L, Side.ASK, 100L, 6L));
@@ -145,45 +146,45 @@ class AeronEngineServerTest {
     PlaceResult originalFill = new PlaceResult(2L, List.of(new Trade(2L, 1L, 100L, 4L)), 0L);
 
     // The first server run leaves six lots resting on bid 1.
-    List<List<CommandResult>> firstResults = runServerWithRequests(tempDir.resolve("first-run"), journalPath,
+    List<List<CommandResult>> firstResults = runServerWithRequests(tempDir.resolve("first-run"), archiveDirectory,
         List.of(List.of(bid, ask)), false, false);
     assertEquals(List.of(List.of(new PlaceResult(1L, List.of(), 10L), originalFill)), firstResults);
-    assertEquals(List.of(bid, ask), new RequestJournal(journalPath).readAll());
+    assertEquals(List.of(bid, ask), ArchiveTestSupport.readAll(archiveDirectory));
 
     // A new JVM must remember the filled ask's reply before accepting a retry of that same UUID.
-    List<List<CommandResult>> secondResults = runServerWithRequests(tempDir.resolve("second-run"), journalPath,
+    List<List<CommandResult>> secondResults = runServerWithRequests(tempDir.resolve("second-run"), archiveDirectory,
         List.of(List.of(ask, finalFill, cancel)), false, false);
     assertEquals(List.of(List.of(originalFill, new PlaceResult(3L, List.of(new Trade(3L, 1L, 100L, 6L)), 0L),
         new CancelResult(1L, false))), secondResults);
-    assertEquals(List.of(bid, ask, finalFill, cancel), new RequestJournal(journalPath).readAll(),
-        "Recovery and retries must not append; only the two new requests may extend the journal");
+    assertEquals(List.of(bid, ask, finalFill, cancel), ArchiveTestSupport.readAll(archiveDirectory),
+        "Recovery and retries must not append; only the two new requests may extend the log");
   }
 
   @Test
   @Timeout(30)
   void rejectsDuplicateOrderAndProcessesNextCommand(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
-    new RequestJournal(journalPath)
-        .append(new CommandRequest(new UUID(0L, 1L), new PlaceOrder(1L, Side.BID, 100L, 10L)));
+    Path archiveDirectory = tempDir.resolve("archive");
+    ArchiveTestSupport.record(archiveDirectory,
+        List.of(new CommandRequest(new UUID(0L, 1L), new PlaceOrder(1L, Side.BID, 100L, 10L))));
 
     // Recover bid 1, reject an attempt to change its price and size, then match a valid ask.
-    List<CommandResult> results = runServerSession(tempDir, journalPath,
+    List<CommandResult> results = runServerSession(tempDir, archiveDirectory,
         List.of(new PlaceOrder(1L, Side.BID, 200L, 2L), new PlaceOrder(2L, Side.ASK, 99L, 4L)), false);
     assertEquals(List.of(new RejectResult(1L, RejectReason.DUPLICATE_ORDER_ID),
         new PlaceResult(2L, List.of(new Trade(2L, 1L, 100L, 4L)), 0L)), results);
 
     // Record the rejected request too, so its response can be reconstructed after restart.
     assertEquals(List.of(new PlaceOrder(1L, Side.BID, 100L, 10L), new PlaceOrder(1L, Side.BID, 200L, 2L),
-        new PlaceOrder(2L, Side.ASK, 99L, 4L)), journalCommands(journalPath));
+        new PlaceOrder(2L, Side.ASK, 99L, 4L)), recordedCommands(archiveDirectory));
   }
 
   @Test
   @Timeout(30)
   void servesAnotherClientAfterFirstClientDisconnects(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
+    Path archiveDirectory = tempDir.resolve("archive");
 
     // Each inner list uses a new client connection, but both talk to the same server JVM.
-    List<List<CommandResult>> results = runServerWithClients(tempDir, journalPath,
+    List<List<CommandResult>> results = runServerWithClients(tempDir, archiveDirectory,
         List.of(List.of(new PlaceOrder(1L, Side.BID, 100L, 10L), new PlaceOrder(2L, Side.ASK, 99L, 4L)),
             List.of(new PlaceOrder(3L, Side.ASK, 100L, 6L), new CancelOrder(1L))),
         false);
@@ -195,30 +196,30 @@ class AeronEngineServerTest {
     assertEquals(List.of(new PlaceResult(3L, List.of(new Trade(3L, 1L, 100L, 6L)), 0L), new CancelResult(1L, false)),
         results.get(1));
     assertEquals(List.of(new PlaceOrder(1L, Side.BID, 100L, 10L), new PlaceOrder(2L, Side.ASK, 99L, 4L),
-        new PlaceOrder(3L, Side.ASK, 100L, 6L), new CancelOrder(1L)), journalCommands(journalPath));
+        new PlaceOrder(3L, Side.ASK, 100L, 6L), new CancelOrder(1L)), recordedCommands(archiveDirectory));
   }
 
   @Test
   @Timeout(30)
   void shutsDownCleanlyWhileIdle(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
+    Path archiveDirectory = tempDir.resolve("archive");
 
     // No client ever connects: the server must still notice the shutdown request and close its driver.
-    runServerWithClients(tempDir, journalPath, List.of(), false);
+    runServerWithClients(tempDir, archiveDirectory, List.of(), false);
 
-    assertEquals("", Files.readString(journalPath));
+    assertEquals(List.of(), ArchiveTestSupport.readAll(archiveDirectory));
   }
 
   @Test
   @Timeout(20)
   void shutsDownWhileAReplyHasNoSubscriber(@TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
+    Path archiveDirectory = tempDir.resolve("archive");
     Path serverLog = tempDir.resolve("server.log");
     Path driverDirectory = tempDir.resolve("exchange-lab-aeron");
     String classpath = System.getProperty("surefire.test.class.path", System.getProperty("java.class.path"));
     Process server = new ProcessBuilder(Path.of(System.getProperty("java.home"), "bin", "java").toString(),
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED", "-Djava.io.tmpdir=" + tempDir, "-cp", classpath,
-        AeronEngineServer.class.getName(), journalPath.toString()).redirectErrorStream(true)
+        AeronEngineServer.class.getName(), archiveDirectory.toString()).redirectErrorStream(true)
         .redirectOutput(serverLog.toFile()).start();
     CommandRequest request = new CommandRequest(new UUID(0L, 1L), new PlaceOrder(1L, Side.BID, 100L, 10L));
     ConcurrentLinkedQueue<Throwable> errors = new ConcurrentLinkedQueue<>();
@@ -238,10 +239,9 @@ class AeronEngineServerTest {
           assertTrue(System.nanoTime() - deadline < 0, "Test request could not be sent");
           idle.idle();
         }
-        while (Files.size(journalPath) == 0) {
-          assertTrue(server.isAlive(), "Server exited before journaling the request");
-          assertTrue(System.nanoTime() - deadline < 0, "Request was never journaled");
-          idle.idle();
+        try (AeronArchive archive = ArchiveTestSupport.connect(driverDirectory)) {
+          long id = ArchiveTestSupport.recordingId(archive);
+          ArchiveTestSupport.await(() -> archive.getRecordingPosition(id) > 0);
         }
         assertTrue(errors.isEmpty(), errors::toString);
       }
@@ -253,7 +253,7 @@ class AeronEngineServerTest {
       assertFalse(output.contains("Exception"), output);
       assertFalse(output.contains("Server shutdown exceeded"), output);
       assertFalse(Files.exists(driverDirectory), "Shutdown did not remove the Aeron driver directory\n" + output);
-      assertEquals(List.of(request), new RequestJournal(journalPath).readAll());
+      assertEquals(List.of(request), ArchiveTestSupport.readAll(archiveDirectory));
     } finally {
       if (server.isAlive()) {
         server.destroyForcibly();
@@ -262,27 +262,30 @@ class AeronEngineServerTest {
     }
   }
 
-  @ParameterizedTest(name = "journal write fails: {0}")
+  @ParameterizedTest(name = "recording fails: {0}")
   @ValueSource(booleans = {false, true})
   @Timeout(15)
-  void reportsAgentFailureAndClosesResources(boolean failJournal, @TempDir Path tempDir) throws Exception {
-    Path journalPath = tempDir.resolve("requests.journal");
+  void reportsAgentFailureAndClosesResources(boolean failRecording, @TempDir Path tempDir) throws Exception {
+    Path archiveDirectory = tempDir.resolve("archive");
     Path serverLog = tempDir.resolve("server.log");
     Path driverDirectory = tempDir.resolve("exchange-lab-aeron");
     String classpath = System.getProperty("surefire.test.class.path", System.getProperty("java.class.path"));
     Process server = new ProcessBuilder(Path.of(System.getProperty("java.home"), "bin", "java").toString(),
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED", "-Djava.io.tmpdir=" + tempDir, "-cp", classpath,
-        AeronEngineServer.class.getName(), journalPath.toString(), "--quiet").redirectErrorStream(true)
+        AeronEngineServer.class.getName(), archiveDirectory.toString(), "--quiet").redirectErrorStream(true)
         .redirectOutput(serverLog.toFile()).start();
     CommandRequest request = new CommandRequest(new UUID(0L, 1L), new PlaceOrder(1L, Side.BID, 100L, 10L));
     ConcurrentLinkedQueue<Throwable> errors = new ConcurrentLinkedQueue<>();
 
     try {
       awaitServerOutput(server, serverLog, "Server ready:");
-      if (failJournal) {
-        // Recovery has finished. Replacing the empty journal with a directory makes the next append fail.
-        Files.delete(journalPath);
-        Files.createDirectory(journalPath);
+      if (failRecording) {
+        // Stop the real recording after startup; the next command must fail before engine mutation.
+        try (AeronArchive archive = ArchiveTestSupport.connect(driverDirectory)) {
+          long id = ArchiveTestSupport.recordingId(archive);
+          archive.tryStopRecordingByIdentity(id);
+          ArchiveTestSupport.await(() -> archive.getStopPosition(id) != AeronArchive.NULL_POSITION);
+        }
       }
       try (
           Aeron aeron = Aeron
@@ -299,15 +302,15 @@ class AeronEngineServerTest {
         }
         assertTrue(errors.isEmpty(), errors::toString);
 
-        // No reply subscriber connects: a successful journal write is followed by the reply-send timeout.
+        // No reply subscriber connects: a successful recording write is followed by the reply-send timeout.
         assertTrue(server.waitFor(8, TimeUnit.SECONDS),
             "Agent failure did not stop the server\n" + Files.readString(serverLog));
         assertTrue(server.exitValue() != 0, "Agent failure was reported as a successful process exit");
       }
       String output = Files.readString(serverLog);
       assertTrue(output.contains("IllegalStateException: Engine agent failed"), output);
-      String expectedCause = failJournal
-          ? "Caused by: java.nio.file.FileSystemException:"
+      String expectedCause = failRecording
+          ? "Caused by: java.lang.IllegalStateException: Request recording stopped unexpectedly:"
           : "Caused by: java.lang.IllegalStateException: Timed out sending reply";
       assertTrue(output.contains(expectedCause),
           "The original agent failure must remain the exception cause\n" + output);
@@ -315,11 +318,12 @@ class AeronEngineServerTest {
       assertFalse(output.contains("failed to close"), output);
       assertFalse(output.contains("Result:"), "An undelivered response must not be logged as sent\n" + output);
       assertFalse(Files.exists(driverDirectory), "The runner and driver were not closed after failure\n" + output);
-      if (failJournal) {
-        assertTrue(Files.isDirectory(journalPath), "The test's unwritable journal must remain untouched");
+      if (failRecording) {
+        assertEquals(List.of(), ArchiveTestSupport.readAll(archiveDirectory),
+            "A failed recording must not accept the request");
       } else {
-        assertEquals(List.of(request), new RequestJournal(journalPath).readAll(),
-            "A reply failure must preserve the single journaled command for recovery");
+        assertEquals(List.of(request), ArchiveTestSupport.readAll(archiveDirectory),
+            "A reply failure must preserve the single recorded command for recovery");
       }
     } finally {
       if (server.isAlive()) {
@@ -329,28 +333,58 @@ class AeronEngineServerTest {
     }
   }
 
-  private static List<EngineCommand> journalCommands(Path path) throws IOException {
-    return new RequestJournal(path).readAll().stream().map(CommandRequest::command).toList();
+  @Test
+  @Timeout(35)
+  void recoversAfterAbruptProcessDeath(@TempDir Path tempDir) throws Exception {
+    Path archiveDirectory = tempDir.resolve("archive");
+    Path serverLog = tempDir.resolve("crash.log");
+    Path driverDirectory = tempDir.resolve("exchange-lab-aeron");
+    String classpath = System.getProperty("surefire.test.class.path", System.getProperty("java.class.path"));
+    CommandRequest bid = new CommandRequest(new UUID(0, 1), new PlaceOrder(1, Side.BID, 100, 10));
+    CommandRequest ask = new CommandRequest(new UUID(0, 2), new PlaceOrder(2, Side.ASK, 99, 4));
+    Process server = new ProcessBuilder(Path.of(System.getProperty("java.home"), "bin", "java").toString(),
+        "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED", "-Djava.io.tmpdir=" + tempDir, "-cp", classpath,
+        AeronEngineServer.class.getName(), archiveDirectory.toString()).redirectErrorStream(true)
+        .redirectOutput(serverLog.toFile()).start();
+    try {
+      awaitServerOutput(server, serverLog, "Server ready:");
+      exchangeRequests(server, serverLog, driverDirectory, List.of(bid, ask), false, false);
+    } finally {
+      server.destroyForcibly();
+      assertTrue(server.waitFor(3, TimeUnit.SECONDS));
+    }
+    // Archive's mark file deliberately rejects another owner until its ten-second heartbeat lease expires.
+    Thread.sleep(11_000);
+    CommandRequest fill = new CommandRequest(new UUID(0, 3), new PlaceOrder(3, Side.ASK, 100, 6));
+    assertEquals(
+        List.of(List.of(new PlaceResult(2, List.of(new Trade(2, 1, 100, 4)), 0),
+            new PlaceResult(3, List.of(new Trade(3, 1, 100, 6)), 0))),
+        runServerWithRequests(tempDir.resolve("restart"), archiveDirectory, List.of(List.of(ask, fill)), false, false));
+    assertEquals(List.of(bid, ask, fill), ArchiveTestSupport.readAll(archiveDirectory));
   }
 
-  private static List<CommandResult> runServerSession(Path tempDir, Path journalPath, List<EngineCommand> orders,
+  private static List<EngineCommand> recordedCommands(Path path) throws IOException {
+    return ArchiveTestSupport.readAll(path).stream().map(CommandRequest::command).toList();
+  }
+
+  private static List<CommandResult> runServerSession(Path tempDir, Path archiveDirectory, List<EngineCommand> orders,
       boolean delayFinalReply) throws Exception {
-    return runServerWithClients(tempDir, journalPath, List.of(orders), delayFinalReply).getFirst();
+    return runServerWithClients(tempDir, archiveDirectory, List.of(orders), delayFinalReply).getFirst();
   }
 
-  private static List<List<CommandResult>> runServerWithClients(Path tempDir, Path journalPath,
+  private static List<List<CommandResult>> runServerWithClients(Path tempDir, Path archiveDirectory,
       List<List<EngineCommand>> clientSessions, boolean delayFinalReply) throws Exception {
-    return runServerWithClients(tempDir, journalPath, clientSessions, delayFinalReply, false);
+    return runServerWithClients(tempDir, archiveDirectory, clientSessions, delayFinalReply, false);
   }
 
-  private static List<List<CommandResult>> runServerWithClients(Path tempDir, Path journalPath,
+  private static List<List<CommandResult>> runServerWithClients(Path tempDir, Path archiveDirectory,
       List<List<EngineCommand>> clientSessions, boolean delayFinalReply, boolean fragmentRequests) throws Exception {
     List<List<CommandRequest>> requestSessions = clientSessions.stream()
         .map(orders -> orders.stream().map(order -> new CommandRequest(UUID.randomUUID(), order)).toList()).toList();
-    return runServerWithRequests(tempDir, journalPath, requestSessions, delayFinalReply, fragmentRequests);
+    return runServerWithRequests(tempDir, archiveDirectory, requestSessions, delayFinalReply, fragmentRequests);
   }
 
-  private static List<List<CommandResult>> runServerWithRequests(Path tempDir, Path journalPath,
+  private static List<List<CommandResult>> runServerWithRequests(Path tempDir, Path archiveDirectory,
       List<List<CommandRequest>> clientSessions, boolean delayFinalReply, boolean fragmentRequests) throws Exception {
     Files.createDirectories(tempDir);
     Path serverLog = tempDir.resolve("server.log");
@@ -358,7 +392,7 @@ class AeronEngineServerTest {
     String classpath = System.getProperty("surefire.test.class.path", System.getProperty("java.class.path"));
     Process server = new ProcessBuilder(Path.of(System.getProperty("java.home"), "bin", "java").toString(),
         "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED", "-Daeron.ipc.mtu.length=" + IPC_MTU_LENGTH,
-        "-Djava.io.tmpdir=" + tempDir, "-cp", classpath, AeronEngineServer.class.getName(), journalPath.toString())
+        "-Djava.io.tmpdir=" + tempDir, "-cp", classpath, AeronEngineServer.class.getName(), archiveDirectory.toString())
         .redirectErrorStream(true).redirectOutput(serverLog.toFile()).start();
 
     try {
